gravitee-apim-portal-webui-next/src/components/redoc-content-viewer/redoc-content-viewer.component.scss
/*
 * Copyright (C) 2024 The Gravitee team (http://gravitee.io)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
@use '../../scss/theme' as theme;

:host {
  --redoc-breakpoint-medium: #{theme.$redoc-breakpoint-medium};
  --redoc-breakpoint-large: #{theme.$redoc-breakpoint-large};
  display: block;
  width: 100%;
  overflow: visible;
}

#redoc {
  width: 100%;
  overflow: visible;
}

